create new files

--- a/assignment/aboutus.html
+++ b/assignment/aboutus.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>About Us</title>
   <style>
 
   .navbar {
@@ -124,8 +124,10 @@ html {
     <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/DOG CARE/about us/csm_Group_photo_2022-08-15__9__DCC_23377bb3f0.jpg" alt="Gruop" style="width:100%">
-      <div class="container">
+      <a href="weandourvision.html" class="active">
+        <img src="assets/DOG CARE/about us/csm_Group_photo_2022-08-15__9__DCC_23377bb3f0.jpg" alt="Gruop" style="width:100%">
+     </a>
+       <div class="container">
         <h2>WE & OUR VISION</h2>
         <p class="title">Gruop</p>
       </div>
@@ -136,8 +138,10 @@ html {
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/DOG CARE/about us/csm_2Pups_2015-08-11_3bcb5159c8.jpg" alt="sponsor" style="width:100%">
-      <div class="container">
+      <a href="marinamobius.html" class="active">
+         <img src="assets/DOG CARE/about us/csm_2Pups_2015-08-11_3bcb5159c8.jpg" alt="sponsor" style="width:100%">
+      </a>
+        <div class="container">
         <h2>MARINA MOBIUS</h2>
         <p class="title">Sponser</p>
       </div>
@@ -148,7 +152,9 @@ html {
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/DOG CARE/about us/csm_0image27-adjust-horizon_tmw2hp0j_1_479782c3b6.jpg" alt="video" style="width:100%">
+      <a href="videosaboutdcc.html" class="active"> 
+        <img src="assets/DOG CARE/about us/csm_0image27-adjust-horizon_tmw2hp0j_1_479782c3b6.jpg" alt="video" style="width:100%">
+     </a>
       <div class="container">
         <h2>VIDEOS ABOUT DCC</h2>
         <p class="title">Special moments</p>
@@ -160,7 +166,9 @@ html {
  <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/DOG CARE/about us/csm_02_Tempeltour_bdc6151f66.jpg" alt="tour" style="width:100%">
+      <a href="news&reports.html" class="active">
+        <img src="assets/DOG CARE/about us/csm_02_Tempeltour_bdc6151f66.jpg" alt="tour" style="width:100%">
+      </a>
       <div class="container">
         <h2>NEWS & REPORTS</h2>
         <p class="title">Performence Of DCC</p>
@@ -171,7 +179,9 @@ html {
     <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/DOG CARE/about us/csm_SophieRoz_2016-09-30__1__e91f94ec3d.jpg" alt="guest" style="width:100%">
+      <a href="guestbook.html" class="active">
+        <img src="assets/DOG CARE/about us/csm_SophieRoz_2016-09-30__1__e91f94ec3d.jpg" alt="guest" style="width:100%">
+      </a>
       <div class="container">
         <h2>GUESTBOOK</h2>
         <p class="title">About Guests</p>
