--- a/assignment/animalsinsrilanka.html
+++ b/assignment/animalsinsrilanka.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Animals In SRI LANKA</title>
   <style>
 
 .navbar {
   overflow: hidden;
-  background-color: #333;
+  background-color: #100e0e;
   position: sticky;
   position: -webkit-sticky;
   top: 0;
@@ -95,6 +95,7 @@ html {
   }
 }
 
+
   </style>
 </head>
 <body>
@@ -145,7 +146,9 @@ html {
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/DOG CARE/animals in sri lanka/csm_Rudi_2021-05-22__17__DCC_89082b0ae2.jpg" alt="farm" style="width:100%">
+      <a href="farmanimals.html" class="active">
+        <img src="assets/DOG CARE/animals in sri lanka/csm_Rudi_2021-05-22__17__DCC_89082b0ae2.jpg" alt="farm" style="width:100%">
+      </a>
       <div class="container">
         <h2>FARM ANIMALS</h2>
       </div>
@@ -155,8 +158,10 @@ html {
  <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/DOG CARE/animals in sri lanka/csm_csm_Rassehunde_14955cf448_77ee87fedc.jpg" alt="dogs" style="width:100%">
-      <div class="container">
+      <a href="pedigreedogsinsrilanka.html" class="active">
+        <img src="assets/DOG CARE/animals in sri lanka/csm_csm_Rassehunde_14955cf448_77ee87fedc.jpg" alt="dogs" style="width:100%">
+      </a>
+       <div class="container">
         <h2>PEDIGREE DOGS IN SRI LANKA</h2>
       </div>
     </div>
