--- a/assignment/pages/animalsinsrilanka.html
+++ b/assignment/pages/animalsinsrilanka.html
@@ -108,7 +108,7 @@ html {
         <a href="contacts.html" class="active" style="text-decoration: none;color: aqua;">CONTACTS</a>
    </div>
   <div class="about-section" style="background-color: peachpuff;">
-    <img src="assets/icons8-dog-100.png" alt="dog" >
+    <img src="/assignment/assets/icons8-dog-100.png" alt="dog" >
   <h2 style="color:darkorange;">DOG CARE CLINIC - MIHIRIPENNA THALPE _ SRI LANKA</h2>
   <h5 style=" font-family: 'Arial Narrow', Arial, sans-serif;">Help Us to Help</h5>
     
@@ -123,7 +123,7 @@ html {
   <div class="column">
     <div class="card">
         <a href="situationofanimal.html" class="active">
-        <img src="assets/pAssets/csm_csm_Startbild_ed14dcbe86_2750e5746d.jpg" alt="dailytour" style="width:100%">
+        <img src="/assignment/assets/pAssets/csm_csm_Startbild_ed14dcbe86_2750e5746d.jpg" alt="dailytour" style="width:100%">
       </a>
       <div class="container">
         <h2>SITUATION OF ANIMALS </h2>
@@ -135,7 +135,7 @@ html {
   <div class="column">
     <div class="card">
         <a href="catsatdcc.html" class="active">
-        <img src="assets/pAssets/csm_all_in_a_row_2020-05-14_DCC_c8ec379209.jpg" alt="dailytour" style="width:100%">
+        <img src="/assignment/assets/pAssets/csm_all_in_a_row_2020-05-14_DCC_c8ec379209.jpg" alt="dailytour" style="width:100%">
       </a>
      <div class="container">
         <h2>CATS AT THE DCC</h2>
@@ -147,7 +147,7 @@ html {
   <div class="column">
     <div class="card">
       <a href="farmanimals.html" class="active">
-        <img src="assets/DOG CARE/animals in sri lanka/csm_Rudi_2021-05-22__17__DCC_89082b0ae2.jpg" alt="farm" style="width:100%">
+        <img src="/assignment/assets/DOG CARE/animals in sri lanka/csm_Rudi_2021-05-22__17__DCC_89082b0ae2.jpg" alt="farm" style="width:100%">
       </a>
       <div class="container">
         <h2>FARM ANIMALS</h2>
@@ -159,7 +159,7 @@ html {
   <div class="column">
     <div class="card">
       <a href="pedigreedogsinsrilanka.html" class="active">
-        <img src="assets/DOG CARE/animals in sri lanka/csm_csm_Rassehunde_14955cf448_77ee87fedc.jpg" alt="dogs" style="width:100%">
+        <img src="/assignment/assets/DOG CARE/animals in sri lanka/csm_csm_Rassehunde_14955cf448_77ee87fedc.jpg" alt="dogs" style="width:100%">
       </a>
        <div class="container">
         <h2>PEDIGREE DOGS IN SRI LANKA</h2>
@@ -178,9 +178,9 @@ html {
             <div style="background-color:lightslategray;">
          <table style="width: 600px; height: 400px; text-align: center;">
         <tr style="height: 100px; width: 150px;">
-            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="assets/icons8-facebook-50.png" alt="none"></a></td>
-            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="assets/icons8-twitter-50.png" alt="none"></a></td>
-            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="assets/icons8-youtube-logo-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="/assignment/assets/icons8-facebook-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="/assignment/assets/icons8-twitter-50.png" alt="none"></a></td>
+            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="/assignment/assets/icons8-youtube-logo-50.png" alt="none"></a></td>
         </tr>
         </div>
 
