--- a/assignment/pages/catsatdcc.html
+++ b/assignment/pages/catsatdcc.html
@@ -174,7 +174,7 @@ html {
         <a href="contacts.html" class="active" style="text-decoration: none;color: aqua;">CONTACTS</a>
    </div>
   <div class="about-section" style="background-color: peachpuff;">
-    <img src="assets/icons8-dog-100.png" alt="dog" >
+    <img src="/assignment/assets/icons8-dog-100.png" alt="dog" >
   <h2 style="color:darkorange;">DOG CARE CLINIC - MIHIRIPENNA THALPE _ SRI LANKA</h2>
   <h5 style=" font-family: 'Arial Narrow', Arial, sans-serif;">Help Us to Help</h5>
     
@@ -242,9 +242,6 @@ Only with your help we are able to be there for the cats of Sri Lanka.</p>
       <img src="/assignment/assets/pAssets/CG5.jpg" alt="retirement" style="width:100%">
     </div>
   </div>  
-
-
-
 
  <div class="row">
   <div class="column">
