--- a/assignment/pages/clinic.html
+++ b/assignment/pages/clinic.html
@@ -107,7 +107,7 @@ html {
         <a href="contacts.html" class="active" style="text-decoration: none;color: aqua;">CONTACTS</a>
    </div>
   <div class="about-section" style="background-color: peachpuff;">
-    <img src="assets/icons8-dog-100.png" alt="dog" >
+    <img src="/assignment/assets/icons8-dog-100.png" alt="dog" >
   <h2 style="color:darkorange;">DOG CARE CLINIC - MIHIRIPENNA THALPE _ SRI LANKA</h2>
   <h5 style=" font-family: 'Arial Narrow', Arial, sans-serif;">Help Us to Help</h5>
     
@@ -119,7 +119,7 @@ html {
     <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/DOG CARE/clinic/csm_PanaromaNC_057849ded0.jpg" alt="NEW" style="width:100%">
+      <img src="/assignment/assets/DOG CARE/clinic/csm_PanaromaNC_057849ded0.jpg" alt="NEW" style="width:100%">
       <div class="container">
         <h2>THE 'NEW' CLINIC </h2>
       </div>
@@ -129,7 +129,7 @@ html {
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/DOG CARE/clinic/csm_OP_5239e43c87.jpg" alt="OLD" style="width:100%">
+      <img src="/assignment/assets/DOG CARE/clinic/csm_OP_5239e43c87.jpg" alt="OLD" style="width:100%">
       <div class="container">
         <h2>THE 'OLD' CLINIC</h2>
       </div>
@@ -139,7 +139,7 @@ html {
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/DOG CARE/clinic/csm_IC_Unit_2018-04-04__2__817fba2ee1.jpg" alt="UNIT" style="width:100%">
+      <img src="/assignment/assets/DOG CARE/clinic/csm_IC_Unit_2018-04-04__2__817fba2ee1.jpg" alt="UNIT" style="width:100%">
       <div class="container">
         <h2>THE DCC INTENSIVE CARE UNIT</h2>
       </div>
@@ -149,7 +149,7 @@ html {
  <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/DOG CARE/clinic/csm_Behindi__3__451992e7e4.jpg" alt="disable" style="width:100%">
+      <img src="/assignment/assets/DOG CARE/clinic/csm_Behindi__3__451992e7e4.jpg" alt="disable" style="width:100%">
       <div class="container">
         <h2>OUR DISABLED AREA</h2>
       </div>
@@ -159,7 +159,7 @@ html {
      <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/DOG CARE/clinic/csm_Medizin_2017-02-07__2__a41b8337f0.jpg" alt="LIFE" style="width:100%">
+      <img src="/assignment/assets/DOG CARE/clinic/csm_Medizin_2017-02-07__2__a41b8337f0.jpg" alt="LIFE" style="width:100%">
       <div class="container">
         <h2>A DOG'S LIFE AT THE DCC</h2>
       </div>
@@ -169,7 +169,7 @@ html {
      <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/DOG CARE/clinic/csm_findus_dcc_757f69e364.jpg" alt="find" style="width:100%">
+      <img src="/assignment/assets/DOG CARE/clinic/csm_findus_dcc_757f69e364.jpg" alt="find" style="width:100%">
       <div class="container">
         <h2>HOW TO FIND US</h2>
       </div>
@@ -186,9 +186,9 @@ html {
             <div style="background-color:lightslategray;">
          <table style="width: 600px; height: 400px; text-align: center;">
         <tr style="height: 100px; width: 150px;">
-            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="assets/icons8-facebook-50.png" alt="none"></a></td>
-            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="assets/icons8-twitter-50.png" alt="none"></a></td>
-            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="assets/icons8-youtube-logo-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="/assignment/assets/icons8-facebook-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="/assignment/assets/icons8-twitter-50.png" alt="none"></a></td>
+            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="/assignment/assets/icons8-youtube-logo-50.png" alt="none"></a></td>
         </tr>
         </div>
 
