--- a/assignment/pages/helpforanimal&people.html
+++ b/assignment/pages/helpforanimal&people.html
@@ -111,7 +111,7 @@ html {
         <a href="contacts.html" class="active" style="text-decoration: none;color: aqua;">CONTACTS</a>
    </div>
   <div class="about-section" style="background-color: peachpuff;">
-    <img src="assets/icons8-dog-100.png" alt="dog" >
+    <img src="/assignment/assets/icons8-dog-100.png" alt="dog" >
   <h2 style="color:darkorange;">DOG CARE CLINIC - MIHIRIPENNA THALPE _ SRI LANKA</h2>
   <h5 style=" font-family: 'Arial Narrow', Arial, sans-serif;">Help Us to Help</h5>
     
@@ -128,7 +128,7 @@ html {
          <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/APmain.jpg" alt="help" style="width:100%">
+      <img src="/assignment/assets/pAssets/APmain.jpg" alt="help" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -151,7 +151,7 @@ This is a video of one of our check-up tours:</p>
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/AP1.jpg" alt="Fieldclinic" style="width:100%">
+      <img src="/assignment/assets/pAssets/AP1.jpg" alt="Fieldclinic" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -161,7 +161,7 @@ This is a video of one of our check-up tours:</p>
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/AP2.jpg" alt="dailytour" style="width:100%">
+      <img src="/assignment/assets/pAssets/AP2.jpg" alt="dailytour" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -171,7 +171,7 @@ This is a video of one of our check-up tours:</p>
  <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/AP3.jpg" alt="rehome" style="width:100%">
+      <img src="/assignment/assets/pAssets/AP3.jpg" alt="rehome" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -180,7 +180,7 @@ This is a video of one of our check-up tours:</p>
     <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/AP4.jpg" alt="help" style="width:100%">
+      <img src="/assignment/assets/pAssets/AP4.jpg" alt="help" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -189,7 +189,7 @@ This is a video of one of our check-up tours:</p>
     <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/AP5.jpg" alt="retirement" style="width:100%">
+      <img src="/assignment/assets/pAssets/AP5.jpg" alt="retirement" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -201,7 +201,7 @@ This is a video of one of our check-up tours:</p>
  <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/AP6.jpg" alt="rehome" style="width:100%">
+      <img src="/assignment/assets/pAssets/AP6.jpg" alt="rehome" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -221,9 +221,9 @@ This is a video of one of our check-up tours:</p>
             <div style="background-color:lightslategray;">
          <table style="width: 600px; height: 400px; text-align: center;">
         <tr style="height: 100px; width: 150px;">
-            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="assets/pAssets/icons8-facebook-50.png" alt="none"></a></td>
-            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="assets/pAssets/icons8-twitter-50.png" alt="none"></a></td>
-            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="assets/pAssets/icons8-youtube-logo-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="/assignment/assets/pAssets/icons8-facebook-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="/assignment/assets/pAssets/icons8-twitter-50.png" alt="none"></a></td>
+            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="/assignment/assets/pAssets/icons8-youtube-logo-50.png" alt="none"></a></td>
         </tr>
         </div>
 
