--- a/assignment/pages/ourdailytours.html
+++ b/assignment/pages/ourdailytours.html
@@ -111,7 +111,7 @@ html {
         <a href="contacts.html" class="active" style="text-decoration: none;color: aqua;">CONTACTS</a>
    </div>
   <div class="about-section" style="background-color: peachpuff;">
-    <img src="assets/icons8-dog-100.png" alt="dog" >
+    <img src="/assignment/assets/icons8-dog-100.png" alt="dog" >
   <h2 style="color:darkorange;">DOG CARE CLINIC - MIHIRIPENNA THALPE _ SRI LANKA</h2>
   <h5 style=" font-family: 'Arial Narrow', Arial, sans-serif;">Help Us to Help</h5>
     
@@ -140,7 +140,7 @@ Without our feeding tours the animals would be lost. Your donation helps us to s
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/csm_Feedingtour_2023__1__595aa61593.jpg" alt="Fieldclinic" style="width:100%">
+      <img src="/assignment/assets/pAssets/csm_Feedingtour_2023__1__595aa61593.jpg" alt="Fieldclinic" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -150,7 +150,7 @@ Without our feeding tours the animals would be lost. Your donation helps us to s
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/csm_Feedingtour_2023__1__c01e26d9b5.jpeg" alt="dailytour" style="width:100%">
+      <img src="/assignment/assets/pAssets/csm_Feedingtour_2023__1__c01e26d9b5.jpeg" alt="dailytour" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -160,7 +160,7 @@ Without our feeding tours the animals would be lost. Your donation helps us to s
  <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/csm_Feedingtour_2023__3__66c85277cc.jpeg" alt="rehome" style="width:100%">
+      <img src="/assignment/assets/pAssets/csm_Feedingtour_2023__3__66c85277cc.jpeg" alt="rehome" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -169,7 +169,7 @@ Without our feeding tours the animals would be lost. Your donation helps us to s
     <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/csm_Feedingtour_2023__3__8327f22a65.jpg" alt="help" style="width:100%">
+      <img src="/assignment/assets/pAssets/csm_Feedingtour_2023__3__8327f22a65.jpg" alt="help" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -178,7 +178,7 @@ Without our feeding tours the animals would be lost. Your donation helps us to s
     <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/csm_Feedingtour_2023__4__99f753f417.jpeg" alt="retirement" style="width:100%">
+      <img src="/assignment/assets/pAssets/csm_Feedingtour_2023__4__99f753f417.jpeg" alt="retirement" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -190,7 +190,7 @@ Without our feeding tours the animals would be lost. Your donation helps us to s
  <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/csm_Feedingtour_2023__10__289f0ecfd8.jpeg" alt="rehome" style="width:100%">
+      <img src="/assignment/assets/pAssets/csm_Feedingtour_2023__10__289f0ecfd8.jpeg" alt="rehome" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -199,7 +199,7 @@ Without our feeding tours the animals would be lost. Your donation helps us to s
     <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/csm_Feedingtour_2023__5__b06feb03c7.jpeg" alt="help" style="width:100%">
+      <img src="/assignment/assets/pAssets/csm_Feedingtour_2023__5__b06feb03c7.jpeg" alt="help" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -208,7 +208,7 @@ Without our feeding tours the animals would be lost. Your donation helps us to s
     <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/csm_Feedingtour_2023__9__c32047e800.jpeg" alt="retirement" style="width:100%">
+      <img src="/assignment/assets/pAssets/csm_Feedingtour_2023__9__c32047e800.jpeg" alt="retirement" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -226,9 +226,9 @@ Without our feeding tours the animals would be lost. Your donation helps us to s
             <div style="background-color:lightslategray;">
          <table style="width: 600px; height: 400px; text-align: center;">
         <tr style="height: 100px; width: 150px;">
-            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="assets/pAssets/icons8-facebook-50.png" alt="none"></a></td>
-            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="assets/pAssets/icons8-twitter-50.png" alt="none"></a></td>
-            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="assets/pAssets/icons8-youtube-logo-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="/assignment/assets/pAssets/icons8-facebook-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="/assignment/assets/pAssets/icons8-twitter-50.png" alt="none"></a></td>
+            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="/assignment/assets/pAssets/icons8-youtube-logo-50.png" alt="none"></a></td>
         </tr>
         </div>
 
