--- a/assignment/pages/situationofanimal.html
+++ b/assignment/pages/situationofanimal.html
@@ -111,7 +111,7 @@ html {
         <a href="contacts.html" class="active" style="text-decoration: none;color: aqua;">CONTACTS</a>
    </div>
   <div class="about-section" style="background-color: peachpuff;">
-    <img src="assets/icons8-dog-100.png" alt="dog" >
+    <img src="/assignment/assets/icons8-dog-100.png" alt="dog" >
   <h2 style="color:darkorange;">DOG CARE CLINIC - MIHIRIPENNA THALPE _ SRI LANKA</h2>
   <h5 style=" font-family: 'Arial Narrow', Arial, sans-serif;">Help Us to Help</h5>
     
@@ -130,7 +130,7 @@ html {
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/AS1.jpg" alt="Fieldclinic" style="width:100%">
+      <img src="/assignment/assets/pAssets/AS1.jpg" alt="Fieldclinic" style="width:100%">
       <div class="container">
           <p>An animal's life is far from easy in Sri Lanka.
 
@@ -159,7 +159,7 @@ html {
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/mahatma_gandhi_by_nashaath-d49i9cl.jpg" alt="dailytour" style="width:100%">
+      <img src="/assignment/assets/pAssets/mahatma_gandhi_by_nashaath-d49i9cl.jpg" alt="dailytour" style="width:100%">
       <div class="container">
            <h4 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">𝙏𝙝𝙚 𝙜𝙧𝙚𝙖𝙩𝙣𝙚𝙨𝙨 𝙤𝙛 𝙖 𝙣𝙖𝙩𝙞𝙤𝙣 𝙘𝙖𝙣 𝙗𝙚 𝙟𝙪𝙙𝙜𝙚𝙙 𝙗𝙮 𝙩𝙝𝙚 𝙬𝙖𝙮 𝙞𝙩𝙨 𝙖𝙣𝙞𝙢𝙖𝙡𝙨 𝙖𝙧𝙚 𝙩𝙧𝙚𝙖𝙩𝙚𝙙</h4>
   
@@ -171,7 +171,7 @@ html {
   </div>
   
 
- <div><img src="assets/pAssets/AS2.jpg" alt="rehome" style="width: 400px;height: 300px;">
+ <div><img src="/assignment/assets/pAssets/AS2.jpg" alt="rehome" style="width: 400px;height: 300px;">
       
 
         <p>Unspayed bitches produce several litters of puppies every
@@ -235,9 +235,10 @@ No dog deserves to die in a ditch !
             <div style="background-color:lightslategray;">
          <table style="width: 600px; height: 400px; text-align: center;">
         <tr style="height: 100px; width: 150px;">
-            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="assets/pAssets/icons8-facebook-50.png" alt="none"></a></td>
-            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="assets/pAssets/icons8-twitter-50.png" alt="none"></a></td>
-            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="assets/pAssets/icons8-youtube-logo-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="/assignment/assets/pAssets/icons8-facebook-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="/assignment/assets/pAssets/icons8-twitter-50.png" alt="none"></a></td>
+            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="/assignment/assets/pAssets/icons8-youtube-logo-50.png
+              " alt="none"></a></td>
         </tr>
         </div>
 
