--- a/assignment/pages/thedccfieldclinic.html
+++ b/assignment/pages/thedccfieldclinic.html
@@ -112,7 +112,7 @@ html {
         <a href="contacts.html" class="active" style="text-decoration: none;color: aqua;">CONTACTS</a>
    </div>
   <div class="about-section" style="background-color: peachpuff;">
-    <img src="assets/icons8-dog-100.png" alt="dog" >
+    <img src="/assignment/assets/icons8-dog-100.png" alt="dog" >
   <h2 style="color:darkorange;">DOG CARE CLINIC - MIHIRIPENNA THALPE _ SRI LANKA</h2>
   <h5 style=" font-family: 'Arial Narrow', Arial, sans-serif;">Help Us to Help</h5>
     
@@ -145,7 +145,7 @@ But we need YOUR support to fund these capacities !</p>
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/FC6.jpg" alt="Fieldclinic" style="width:100%">
+      <img src="/assignment/assets/pAssets/FC6.jpg" alt="Fieldclinic" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -155,7 +155,7 @@ But we need YOUR support to fund these capacities !</p>
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/FC2.jpg" alt="dailytour" style="width:100%">
+      <img src="/assignment/assets/pAssets/FC2.jpg" alt="dailytour" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -165,7 +165,7 @@ But we need YOUR support to fund these capacities !</p>
  <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/FC1.jpg" alt="rehome" style="width:100%">
+      <img src="/assignment/assets/pAssets/FC1.jpg" alt="rehome" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -174,7 +174,7 @@ But we need YOUR support to fund these capacities !</p>
     <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/FC4.jpg" alt="help" style="width:100%">
+      <img src="/assignment/assets/pAssets/FC4.jpg" alt="help" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -183,7 +183,7 @@ But we need YOUR support to fund these capacities !</p>
     <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/FC5.jpg" alt="retirement" style="width:100%">
+      <img src="/assignment/assets/pAssets/FC5.jpg" alt="retirement" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -207,9 +207,9 @@ But we need YOUR support to fund these capacities !</p>
             <div style="background-color:lightslategray;">
          <table style="width: 600px; height: 400px; text-align: center;">
         <tr style="height: 100px; width: 150px;">
-            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="assets/pAssets/icons8-facebook-50.png" alt="none"></a></td>
-            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="assets/pAssets/icons8-twitter-50.png" alt="none"></a></td>
-            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="assets/pAssets/icons8-youtube-logo-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="/assignment/assets/pAssets/icons8-facebook-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="/assignment/assets/pAssets/icons8-twitter-50.png" alt="none"></a></td>
+            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="/assignment/assets/pAssets/icons8-youtube-logo-50.png" alt="none"></a></td>
         </tr>
         </div>
 
