--- a/assignment/pages/aboutus.html
+++ b/assignment/pages/aboutus.html
@@ -125,7 +125,7 @@ html {
   <div class="column">
     <div class="card">
       <a href="weandourvision.html" class="active">
-        <img src="assets/DOG CARE/about us/csm_Group_photo_2022-08-15__9__DCC_23377bb3f0.jpg" alt="Gruop" style="width:100%">
+        <img src="/assignment/assets/DOG CARE/about us/csm_Group_photo_2022-08-15__9__DCC_23377bb3f0.jpg" alt="Gruop" style="width:100%">
      </a>
        <div class="container">
         <h2>WE & OUR VISION</h2>
@@ -139,7 +139,7 @@ html {
   <div class="column">
     <div class="card">
       <a href="marinamobius.html" class="active">
-         <img src="assets/DOG CARE/about us/csm_2Pups_2015-08-11_3bcb5159c8.jpg" alt="sponsor" style="width:100%">
+         <img src="/assignment/assets/DOG CARE/about us/csm_2Pups_2015-08-11_3bcb5159c8.jpg" alt="sponsor" style="width:100%">
       </a>
         <div class="container">
         <h2>MARINA MOBIUS</h2>
@@ -153,7 +153,7 @@ html {
   <div class="column">
     <div class="card">
       <a href="videosaboutdcc.html" class="active"> 
-        <img src="assets/DOG CARE/about us/csm_0image27-adjust-horizon_tmw2hp0j_1_479782c3b6.jpg" alt="video" style="width:100%">
+        <img src="/assignment/assets/DOG CARE/about us/csm_0image27-adjust-horizon_tmw2hp0j_1_479782c3b6.jpg" alt="video" style="width:100%">
      </a>
       <div class="container">
         <h2>VIDEOS ABOUT DCC</h2>
@@ -167,7 +167,7 @@ html {
   <div class="column">
     <div class="card">
       <a href="news&reports.html" class="active">
-        <img src="assets/DOG CARE/about us/csm_02_Tempeltour_bdc6151f66.jpg" alt="tour" style="width:100%">
+        <img src="/assignment/assets/DOG CARE/about us/csm_02_Tempeltour_bdc6151f66.jpg" alt="tour" style="width:100%">
       </a>
       <div class="container">
         <h2>NEWS & REPORTS</h2>
@@ -180,7 +180,7 @@ html {
   <div class="column">
     <div class="card">
       <a href="guestbook.html" class="active">
-        <img src="assets/DOG CARE/about us/csm_SophieRoz_2016-09-30__1__e91f94ec3d.jpg" alt="guest" style="width:100%">
+        <img src="/assignment/assets/DOG CARE/about us/csm_SophieRoz_2016-09-30__1__e91f94ec3d.jpg" alt="guest" style="width:100%">
       </a>
       <div class="container">
         <h2>GUESTBOOK</h2>
@@ -197,7 +197,7 @@ html {
 <div class="row" style="background-color: gainsboro;">
   <div class="column">
     <div class="card">
-      <img src="assets/DOG CARE/about us/1660323379932.jpg" alt="DR.Nuwanthi" style="width:100%">
+      <img src="/assignment/assets/DOG CARE/about us/1660323379932.jpg" alt="DR.Nuwanthi" style="width:100%">
       <div class="container">
         <h2>Dr.Nuwanthi Gamage</h2>
         <p class="title">Veterinarian</p>
@@ -209,7 +209,7 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="assets/DOG CARE/about us/1687154124564.jpg" alt="Hasintha" style="width:100%">
+      <img src="/assignment/assets/DOG CARE/about us/1687154124564.jpg" alt="Hasintha" style="width:100%">
       <div class="container">
         <h2>Hasintha Priyankara</h2>
         <p class="title">Veterinarian</p>
@@ -221,7 +221,7 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="assets/DOG CARE/about us/1684134210180.jpg" alt="Haritha" style="width:100%">
+      <img src="/assignment/assets/DOG CARE/about us/1684134210180.jpg" alt="Haritha" style="width:100%">
       <div class="container">
         <h2>Haritha Jayarathne</h2>
         <p class="title">Veterinarian</p>
@@ -239,9 +239,9 @@ html {
             <div style="background-color:lightslategray;">
          <table style="width: 600px; height: 400px; text-align: center;">
         <tr style="height: 100px; width: 150px;">
-            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="assets/icons8-facebook-50.png" alt="none"></a></td>
-            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="assets/icons8-twitter-50.png" alt="none"></a></td>
-            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="assets/icons8-youtube-logo-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="/assignment/assets/icons8-facebook-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="/assignment/assets/icons8-twitter-50.png" alt="none"></a></td>
+            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="/assignment/assets/icons8-youtube-logo-50.png" alt="none"></a></td>
         </tr>
         </div>
 
