--- a/assignment/pages/neutering&vaccination.html
+++ b/assignment/pages/neutering&vaccination.html
@@ -111,7 +111,7 @@ html {
         <a href="contacts.html" class="active" style="text-decoration: none;color: aqua;">CONTACTS</a>
    </div>
   <div class="about-section" style="background-color: peachpuff;">
-    <img src="assets/icons8-dog-100.png" alt="dog" >
+    <img src="/assignment/assets/icons8-dog-100.png" alt="dog" >
   <h2 style="color:darkorange;">DOG CARE CLINIC - MIHIRIPENNA THALPE _ SRI LANKA</h2>
   <h5 style=" font-family: 'Arial Narrow', Arial, sans-serif;">Help Us to Help</h5>
     
@@ -139,7 +139,7 @@ permanently and improves the welfare of the dogs involved.</p>
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/NV1.jpg" alt="Fieldclinic" style="width:100%">
+      <img src="/assignment/assets/pAssets/NV1.jpg" alt="Fieldclinic" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -149,7 +149,7 @@ permanently and improves the welfare of the dogs involved.</p>
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/NV2.jpg" alt="dailytour" style="width:100%">
+      <img src="/assignment/assets/pAssets/NV2.jpg" alt="dailytour" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -159,7 +159,7 @@ permanently and improves the welfare of the dogs involved.</p>
  <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/NV3.jpg" alt="rehome" style="width:100%">
+      <img src="/assignment/assets/pAssets/NV3.jpg" alt="rehome" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -168,7 +168,7 @@ permanently and improves the welfare of the dogs involved.</p>
     <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/NV4.jpg" alt="help" style="width:100%">
+      <img src="/assignment/assets/pAssets/NV4.jpg" alt="help" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -177,7 +177,7 @@ permanently and improves the welfare of the dogs involved.</p>
     <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/NV5.jpg" alt="retirement" style="width:100%">
+      <img src="/assignment/assets/pAssets/NV5.jpg" alt="retirement" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -189,7 +189,7 @@ permanently and improves the welfare of the dogs involved.</p>
  <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/NV6.jpg" alt="rehome" style="width:100%">
+      <img src="/assignment/assets/pAssets/NV6.jpg" alt="rehome" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -198,7 +198,7 @@ permanently and improves the welfare of the dogs involved.</p>
     <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/csm_Feedingtour_2023__5__b06feb03c7.jpeg" alt="help" style="width:100%">
+      <img src="/assignment/assets/pAssets/csm_Feedingtour_2023__5__b06feb03c7.jpeg" alt="help" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -207,7 +207,7 @@ permanently and improves the welfare of the dogs involved.</p>
     <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/csm_Feedingtour_2023__9__c32047e800.jpeg" alt="retirement" style="width:100%">
+      <img src="/assignment/assets/pAssets/csm_Feedingtour_2023__9__c32047e800.jpeg" alt="retirement" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -225,9 +225,9 @@ permanently and improves the welfare of the dogs involved.</p>
             <div style="background-color:lightslategray;">
          <table style="width: 600px; height: 400px; text-align: center;">
         <tr style="height: 100px; width: 150px;">
-            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="assets/pAssets/icons8-facebook-50.png" alt="none"></a></td>
-            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="assets/pAssets/icons8-twitter-50.png" alt="none"></a></td>
-            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="assets/pAssets/icons8-youtube-logo-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="/assignment/assets/pAssets/icons8-facebook-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="/assignment/assets/pAssets/icons8-twitter-50.png" alt="none"></a></td>
+            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="/assignment/assets/pAssets/icons8-youtube-logo-50.png" alt="none"></a></td>
         </tr>
         </div>
 
