--- a/assignment/pages/ourprojects.html
+++ b/assignment/pages/ourprojects.html
@@ -125,7 +125,7 @@ html {
   <div class="column">
     <div class="card">
        <a href="neutering&vaccination.html" class="active">
-        <img src="assets/DOG CARE/our projects/csm_NK_2016-02-17_854c315d00.jpg" alt="dailytour" style="width:100%">
+        <img src="/assignment/" alt="dailytour" style="width:100%">
       </a>
       <div class="container">
         <h2>NEUTERING & VACCINATION</h2>
@@ -138,7 +138,7 @@ html {
   <div class="column">
     <div class="card">
       <a href="thedccfieldclinic.html" class="active">
-        <img src="assets/DOG CARE/our projects/csm_38007976_2601980806494388_1215100145582997504_n_ad507c0762.jpg" alt="dailytour" style="width:100%">
+        <img src="/assignment/assets/DOG CARE/our projects/csm_38007976_2601980806494388_1215100145582997504_n_ad507c0762.jpg" alt="dailytour" style="width:100%">
       </a>
       <div class="container">
         <h2>THE DCC FIELD CLINICS</h2>
@@ -151,7 +151,7 @@ html {
   <div class="column">
     <div class="card">
       <a href="ourdailytours.html" class="active">
-        <img src="assets/DOG CARE/our projects/csm_Taipan_Pacci_Pacca_2015-06-16_b4ef3af235.jpg" alt="dailytour" style="width:100%">
+        <img src="/assignment/assets/DOG CARE/our projects/csm_Taipan_Pacci_Pacca_2015-06-16_b4ef3af235.jpg" alt="dailytour" style="width:100%">
       </a>
       <div class="container">
               <h2>OUR DAILY TOURS</h2>
@@ -166,7 +166,7 @@ html {
   <div class="column">
     <div class="card">
       <a href="dccdogsinlocalfamilies.html" class="active">
-        <img src="assets/DOG CARE/our projects/csm_csm_DSC00063_dcf52a739a_78adcc4c48.jpg" alt="dailytour" style="width:100%">
+        <img src="/assignment/assets/DOG CARE/our projects/csm_csm_DSC00063_dcf52a739a_78adcc4c48.jpg" alt="dailytour" style="width:100%">
       </a>
       <div class="container">
         <h2>REHOME - DCC DOGS IN LOCAL FAMILIES</h2>
@@ -178,7 +178,7 @@ html {
   <div class="column">
     <div class="card">
       <a href="helpforanimal&people.html" class="active">
-        <img src="assets/DOG CARE/our projects/csm_50_plus_header_333f0d9bbc.jpg" alt="dailytour" style="width:100%">
+        <img src="/assignment/assets/DOG CARE/our projects/csm_50_plus_header_333f0d9bbc.jpg" alt="dailytour" style="width:100%">
       </a>
        <div class="container">
         <h2>HELP FOR ANIMALS AND PEOPLE</h2>
@@ -190,7 +190,7 @@ html {
   <div class="column">
     <div class="card">
       <a href="retirementhome.html" class="active">
-        <img src="assets/DOG CARE/our projects/csm_Old_People_Home_Galle_2016-12-19_4__650dd19004.jpg" alt="dailytour" style="width:100%">
+        <img src="/assignment/assets/DOG CARE/our projects/csm_Old_People_Home_Galle_2016-12-19_4__650dd19004.jpg" alt="dailytour" style="width:100%">
       </a>
        <div class="container">
         <h2>THE GALLE RETIREMENT HOME</h2>
@@ -208,9 +208,9 @@ html {
             <div style="background-color:lightslategray;">
          <table style="width: 600px; height: 400px; text-align: center;">
         <tr style="height: 100px; width: 150px;">
-            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="assets/icons8-facebook-50.png" alt="none"></a></td>
-            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="assets/icons8-twitter-50.png" alt="none"></a></td>
-            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="assets/icons8-youtube-logo-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="/assignment/assets/icons8-facebook-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="/assignment/assets/icons8-twitter-50.png" alt="none"></a></td>
+            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="/assignment/assets/icons8-youtube-logo-50.png" alt="none"></a></td>
         </tr>
         </div>
 
