--- a/assignment/pages/retirementhome.html
+++ b/assignment/pages/retirementhome.html
@@ -111,7 +111,7 @@ html {
         <a href="contacts.html" class="active" style="text-decoration: none;color: aqua;">CONTACTS</a>
    </div>
   <div class="about-section" style="background-color: peachpuff;">
-    <img src="assets/icons8-dog-100.png" alt="dog" >
+    <img src="/assignment/assets/icons8-dog-100.png" alt="dog" >
   <h2 style="color:darkorange;">DOG CARE CLINIC - MIHIRIPENNA THALPE _ SRI LANKA</h2>
   <h5 style=" font-family: 'Arial Narrow', Arial, sans-serif;">Help Us to Help</h5>
     
@@ -127,7 +127,7 @@ html {
        <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/RHmain.jpg" alt="Fieldclinic" style="width:100%">
+      <img src="/assignment/assets/pAssets/RHmain.jpg" alt="Fieldclinic" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -146,7 +146,7 @@ to care for their dogs the way it should be.</p>
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/RH1.jpg" alt="Fieldclinic" style="width:100%">
+      <img src="/assignment/assets/pAssets/RH1.jpg" alt="Fieldclinic" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -158,7 +158,7 @@ But our help doesn't stop there as the men and women of the old people's home al
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="assets/pAssets/RH2.jpg" alt="dailytour" style="width:100%">
+      <img src="/assignment/assets/pAssets/RH2.jpg" alt="dailytour" style="width:100%">
       <div class="container">
       </div>
     </div>
@@ -183,9 +183,9 @@ home as often as our funds allow it. We treat the dogs and help the elders. <br>
             <div style="background-color:lightslategray;">
          <table style="width: 600px; height: 400px; text-align: center;">
         <tr style="height: 100px; width: 150px;">
-            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="assets/pAssets/icons8-facebook-50.png" alt="none"></a></td>
-            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="assets/pAssets/icons8-twitter-50.png" alt="none"></a></td>
-            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="assets/pAssets/icons8-youtube-logo-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://www.facebook.com/pages/Dog-Care-Clinic-eV/133231863354785" class="facebook" title="facebook" ><img src="/assignment/assets/pAssets/icons8-facebook-50.png" alt="none"></a></td>
+            <td><a target="blank" href="http://twitter.com/DOGCARECLINIC" class="twitter" title="twitter"><img src="/assignment/assets/pAssets/icons8-twitter-50.png" alt="none"></a></td>
+            <td><a target="blank" href="https://www.youtube.com/user/DogCareCliniceV" class="youtube" title="youtube"><img src="/assignment/assets/pAssets/icons8-youtube-logo-50.png" alt="none"></a></td>
         </tr>
         </div>
 
