--- a/assignment/pages/contacts.html
+++ b/assignment/pages/contacts.html
@@ -112,7 +112,7 @@ input[type=submit]:hover {
   </div>
   <div class="row">
     <div class="column">
-      <img src="assets/DOG CARE/dcc.jpg" style="width:100%">
+      <img src="/assignment/assets/DOG CARE/dcc.jpg" style="width:100%">
     </div>
     <div class="column">
       <form action="/action_page.php">
