--- a/assignment/pages/animalsinsrilanka.html
+++ b/assignment/pages/animalsinsrilanka.html
@@ -163,8 +163,10 @@ html {
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="/assignment/assets/DOG CARE/animals in sri lanka/csm_Rudi_2021-05-22__17__DCC_89082b0ae2.jpg" alt="farm" style="width:100%">
-      <div class="container">
+      <a href="farmanimals.html" class="active">
+        <img src="/assignment/assets/DOG CARE/animals in sri lanka/csm_Rudi_2021-05-22__17__DCC_89082b0ae2.jpg" alt="farm" style="width:100%">
+      </a>
+        <div class="container">
         <h2>FARM ANIMALS</h2>
       </div>
     </div>
@@ -173,8 +175,10 @@ html {
  <div class="row">
   <div class="column">
     <div class="card">
-      <img src="/assignment/assets/DOG CARE/animals in sri lanka/csm_csm_Rassehunde_14955cf448_77ee87fedc.jpg" alt="dogs" style="width:100%">
-      <div class="container">
+      <a href="pedigreedogs.html" class="active">
+        <img src="/assignment/assets/DOG CARE/animals in sri lanka/csm_csm_Rassehunde_14955cf448_77ee87fedc.jpg" alt="dogs" style="width:100%">
+      </a>
+        <div class="container">
         <h2>PEDIGREE DOGS IN SRI LANKA</h2>
       </div>
     </div>
