--- a/assignment/pages/aboutus.html
+++ b/assignment/pages/aboutus.html
@@ -184,7 +184,9 @@ html {
     <div class="row">
   <div class="column">
     <div class="card">
-      <img src="/assignment/assets/DOG CARE/about us/csm_Group_photo_2022-08-15__9__DCC_23377bb3f0.jpg" alt="Gruop" style="width:100%">
+      <a href="we&ourvision.html">
+        <img src="/assignment/assets/DOG CARE/about us/csm_Group_photo_2022-08-15__9__DCC_23377bb3f0.jpg" alt="Gruop" style="width:100%">
+      </a>
       <div class="container">
         <h2>WE & OUR VISION</h2>
         <p class="title">Gruop</p>
@@ -196,7 +198,9 @@ html {
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="/assignment/assets/DOG CARE/about us/csm_2Pups_2015-08-11_3bcb5159c8.jpg" alt="sponsor" style="width:100%">
+      <a href="marinamobius.html">
+        <img src="/assignment/assets/DOG CARE/about us/csm_2Pups_2015-08-11_3bcb5159c8.jpg" alt="sponsor" style="width:100%">
+      </a>
       <div class="container">
         <h2>MARINA MOBIUS</h2>
         <p class="title">Sponser</p>
