--- a/assignment/pages/dccdogsinlocalfamilies.html
+++ b/assignment/pages/dccdogsinlocalfamilies.html
@@ -212,7 +212,7 @@ So every ReHome dog becomes an ambassador of the DCC Project.</p>
    <div class="row">
   <div class="column">
     <div class="card">
-      <img src="/assignment/assets/pAssets/RHmain.jpg" alt="Fieldclinic" style="width:100%">
+      <img src="/assignment/assets/DOG CARE/localfam/csm_Eyda__King_Arthur__Slucky_2023-03_DCC_-_Kopie_560088f857.jpg " alt="ReHome" style="width:100%">
       <div class="container">
       </div>
     </div>
